Fix touch-scroll on mobile devices (#10900) (#10932)

--- a/styles/widgets/common/drawer.less
+++ b/styles/widgets/common/drawer.less
@@ -1,7 +1,6 @@
 .dx-drawer {
     height: 100%;
     width: 100%;
-    touch-action: pinch-zoom;
 }
 
 .dx-drawer-wrapper {
